# localization_analyzer

./: CMakeLists.txt  README.md  package.xml
config/: analyzer_settings.yaml  base_analyzer_settings.yaml
scripts/: analyzer.py  base_analyzer.py  pose_graph_loop_closure_analysis.py  recover_fiducial_calibration_from_pose_graph.py  run_analyzer.yaml
utilities/: aggregate_odometries.py  boxplot_from_npz.py  get_dataset_duration.py  get_distance_traveled_from_aggregated_odometries.py  plot_lc_ftness_hist.py  plot_lc_log.py  plot_loop_candidates.py  plot_volume_size_from_map_info.py  pose_graph_to_odometry.py  segment_aggregated_odometries.py  utilities.py  volume_over_time.py
